--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,105 @@
     <string name="model_file_tflite">crop_recommender_v3.tflite</string>
     <string name="model_file_labels">labels_v3.txt</string>
     <string name="model_file_scaler">scaler_params_v3.json</string>
+
+    <!-- Navigation -->
+    <string name="nav_home">Home</string>
+    <string name="nav_suggest">Suggest</string>
+    <string name="nav_language">Language</string>
+    <string name="nav_help">Help</string>
+    <string name="nav_settings">Settings</string>
+
+    <!-- Home Screen -->
+    <string name="news_title">News!</string>
+    <string name="smart_suggestions_button">Get Smart Suggestions</string>
+    <string name="smart_suggestions_subtitle">What crop should I grow?</string>
+    <string name="farming_tips_button">Farming Tips</string>
+    <string name="farming_tips_subtitle">Soil Care, Pest Control, Weather Tips</string>
+    <string name="health_tips_button">Health Tips</string>
+    <string name="health_tips_subtitle">Fever, Cough, First Aid, Dehydration, etc,</string>
+    <string name="sync_data">Sync Data</string>
+    <string name="last_sync">Last Sync: 2023-07-26</string>
+
+    <!-- Smart Suggestions Screen -->
+    <string name="smart_suggestions_title">Smart Suggestions</string>
+    <string name="select_region">Select Region</string>
+    <string name="select_soil_type">Select Soil Type</string>
+    <string name="select_weather">Select Weather</string>
+    <string name="select_crop">Select Crop</string>
+    <string name="get_suggestion_button">Get Suggestion</string>
+    <string name="suggestion_result">Suggestion Result</string>
+    <string name="no_suggestion">No suggestion available</string>
+    <string name="predict_button">Predict</string>
+    <string name="suggestions_placeholder">Suggestions here…</string>
+
+    <!-- Soil Types -->
+    <string name="soil_sandy">Sandy</string>
+    <string name="soil_loamy">Loamy</string>
+    <string name="soil_clayey">Clayey</string>
+    <string name="soil_silty">Silty</string>
+
+    <!-- Weather Types -->
+    <string name="weather_sunny">Sunny</string>
+    <string name="weather_rainy">Rainy</string>
+    <string name="weather_cloudy">Cloudy</string>
+    <string name="weather_cold">Cold</string>
+
+    <!-- Crops -->
+    <string name="crop_wheat">Wheat</string>
+    <string name="crop_mango">Mango</string>
+    <string name="crop_apple">Apple</string>
+    <string name="crop_maize">Maize</string>
+    <string name="crop_rice">Rice</string>
+    <string name="crop_cotton">Cotton</string>
+    <string name="crop_sugarcane">Sugarcane</string>
+
+    <!-- Regions -->
+    <string name="region_1">Region 1</string>
+    <string name="region_2">Region 2</string>
+    <string name="region_3">Region 3</string>
+
+    <!-- Health Tips Screen -->
+    <string name="health_tips_title">Health Tips</string>
+    <string name="health_fever">Fever</string>
+    <string name="health_fever_tip">Stay hydrated. Wet cloth on forehead.</string>
+    <string name="health_diarrhea">Diarrhea</string>
+    <string name="health_diarrhea_tip">ORS mix, visit health worker.</string>
+    <string name="health_cough">Cough</string>
+    <string name="health_cough_tip">Turmeric milk + warm fluids.</string>
+    <string name="health_cuts">Cuts</string>
+    <string name="health_cuts_tip">Wash with clean water, apply Dettol.</string>
+
+    <!-- Language Selection Screen -->
+    <string name="language_selection_title">Select Language</string>
+    <string name="language_subtitle">Choose your preferred language</string>
+    <string name="language_english">English</string>
+    <string name="language_hindi">हिन्दी (Hindi)</string>
+    <string name="language_marathi">मराठी (Marathi)</string>
+    <string name="language_gujarati">ગુજરાતી (Gujarati)</string>
+    <string name="language_punjabi">ਪੰਜਾਬੀ (Punjabi)</string>
+    <string name="language_bengali">বাংলা (Bengali)</string>
+    <string name="language_tamil">தமிழ் (Tamil)</string>
+    <string name="language_telugu">తెలుగు (Telugu)</string>
+    <string name="language_kannada">ಕನ್ನಡ (Kannada)</string>
+
+    <!-- Settings Screen -->
+    <string name="settings_coming_soon">Settings screen coming soon…</string>
+
+    <!-- Common -->
+    <string name="back">Back</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="loading">Loading…</string>
+    <string name="error">Error</string>
+
+    <!-- Content Descriptions -->
+    <string name="cd_news_image">Agricultural news image</string>
+    <string name="cd_background_image">Background Image</string>
+    <string name="cd_home_icon">Home Icon</string>
+    <string name="cd_suggest_icon">Suggest Icon</string>
+    <string name="cd_language_icon">Language Icon</string>
+    <string name="cd_help_icon">Help Icon</string>
+    <string name="cd_settings_icon">Settings Icon</string>
+    <string name="cd_back_icon">Back</string>
 </resources>
